<resources>
    <string name="app_name">MyContacts</string>

    <string name="name">Shakeel haider</string>

    <string name="add">Add</string>
    <string name="image">Profile Picture</string>
    <string name="fullname">Full Name</string>
    <string name="phonenumber">Phone Number</string>
    <string name="email">Email</string>
    <string name="friend">Friend</string>
    <string name="family">Family</string>
    <string name="classmate">Class Mate</string>
    <string name="submit_button">Submit</string>
    <string name="call_button">Call</string>

    <string-array name="category_array">
        <item>All</item>
        <item>Friends</item>
        <item>Family</item>
        <item>Classmate</item>
    </string-array>
</resources>
